--- a/src/styles/views/StationDeatils.scss
+++ b/src/styles/views/StationDeatils.scss
@@ -470,7 +470,6 @@
 
         .station-details-list {
             .details-list-control {
-                // justify-content: space-around;
                 gap: .5em;
 
 
@@ -490,7 +489,7 @@
                     fill: wheat;
                 }
 
-                .mobile-context {}
+                
             }
         }
     }
